--- a/SVU/SVU.Web.UI/Views/Home/Index.cshtml
+++ b/SVU/SVU.Web.UI/Views/Home/Index.cshtml
@@ -1,7 +1,43 @@
 ﻿@{
     ViewBag.Title = "Home page";
 }
+<div class="jumbotron bg-light">
+    <h4 class="display-4">
+        Who are we
+    </h4>
+    <hr />
+    <p class="text-info font-weight-bold">
+        A group of students continuing thier studies in <a>Syrian Virtual University</a> in Master of web science, we wanted to create a helper website
+        for people to see all the latest news about the lectures and homeworks done by my group.
+    </p>
+</div>
 
-<h1>
-    Hello
-</h1>
+<div class="jumbotron bg-light">
+
+    <h4 class="display-4">
+        Target
+    </h4>
+    <hr />
+    <p class="text-info font-weight-bold">
+        We aim to help all other classmates in any way possible from our blogs to our homeworks which we are going to keep open-source
+        and can be found on <a>GitHub</a>.
+    </p>
+</div>
+
+<div class="jumbotron bg-light">
+    <h4 class=" display-4">
+        Contact us
+    </h4>
+    <hr />
+    <p class="text-info font-weight-bold">
+        Saria Houloubi :
+        <ul class="list-group">
+            <li class="list-group-item">
+                <a href="mailto:houloubis@gmai.com?subject=SVU-Project">Email</a>
+            </li>
+            <li class="list-group-item">
+                <a href="#">Facebook</a>
+            </li>
+        </ul>
+    </p>
+</div>
