--- a/SVU/SVU.Web.UI/wwwroot/css/main.css
+++ b/SVU/SVU.Web.UI/wwwroot/css/main.css
@@ -1,4 +1,13 @@
-﻿html, body {
+﻿@import "custom/container.css";
+@import "custom/menu.css";
+@import "custom/card.css";
+@import "custom/boxHolder.css";
+
+nav {
+    z-index:10000;
+
+}
+html, body {
     height: 100%;
 }
 /*
@@ -15,6 +24,7 @@
 */
 footer {
     position: relative;
+    padding-top : 50px;
     margin-top: -30px;
     height: 30px;
     clear: both;
