Fixed view issues

--- a/SVU/SVU.Web.UI/Views/Class/ADM.cshtml
+++ b/SVU/SVU.Web.UI/Views/Class/ADM.cshtml
@@ -11,8 +11,8 @@
 </div>
 
 <div class="p-5 bg-dark" id="about">
-    <div class="card justify-content-center">
-        <img src="~/img/data-mining.png" class="custome-card-img" alt="Data minning image">
+    <div class="card ">
+        <img src="~/img/data-mining.png" alt="Data minning image">
         <div class="card-body">
             <h5 class="card-title text-center">About</h5>
             <hr />
@@ -65,7 +65,7 @@
     </div>
 </div>
 
-<div class="p-5 bg-dark" id="homework">
+<div class="py-5 bg-dark mb-2" id="homework">
     <div class="v-scroll-menu">
         <div class="card">
             <img src="~/img/data-mining.png" />
