--- a/SVU/SVU.Web.UI/Views/Class/ADM.cshtml
+++ b/SVU/SVU.Web.UI/Views/Class/ADM.cshtml
@@ -2,82 +2,60 @@
     ViewBag.Title = "ADM (Data Mining)";
 }
 
-<div class="box-holder">
-    <div class="box-content">
-        <a role="button" href="#about" class="btn btn-info text-light rounded border rounded-pill">About</a>
-        <a role="button" href="#lectures" class="btn btn-info text-light rounded border rounded-pill">Lectures</a>
-        <a role="button" href="#homework" class="btn btn-warning text-light rounded border rounded-pill">Homewroks</a>
-    </div>
-</div>
-
-<div class="p-5 bg-dark" id="about">
-    <div class="card ">
-        <img src="~/img/data-mining.png" alt="Data minning image">
-        <div class="card-body">
-            <h5 class="card-title text-center">About</h5>
-            <hr />
-            <p class="card-text">
-                Data mining is the process of discovering patterns in large data sets involving methods at the intersection of machine learning, statistics, and database systems.
-                Data mining is an interdisciplinary subfield of computer science and statistics with an overall goal to extract information (with intelligent methods) from a data set and transform the information into a comprehensible structure for further use.
-            </p>
-            <a href="https://en.wikipedia.org/wiki/Data_mining" class="btn btn-primary">wikipedia</a>
-            <a href="https://pedia.svuonline.org/course/view.php?id=410" class="btn btn-primary">SVU pedia</a>
-        </div>
-    </div>
-</div>
-
-
-<div class="py-5" id="lectures">
-    <div class="v-scroll-menu">
-        <div class="card">
-            <img src="~/img/data-mining.png" />
+@Html.Partial("_ClassNavigation.cshtml");
+<div class="slide-in-left">
+    <!--About part-->
+    <div class="p-5 bg-dark" id="about">
+        <div class="card ">
+            <img src="~/img/data-mining.png" alt="Data minning image">
             <div class="card-body">
-                <h5>Lecture 1</h5>
+                <h5 class="card-title text-center">About</h5>
                 <hr />
                 <p class="card-text">
-                    <span class="text-info">Discription : </span> About this class
+                    Data mining is the process of discovering patterns in large data sets involving methods at the intersection of machine learning, statistics, and database systems.
+                    Data mining is an interdisciplinary subfield of computer science and statistics with an overall goal to extract information (with intelligent methods) from a data set and transform the information into a comprehensible structure for further use.
                 </p>
-                <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="~/img/data-mining.png" />
-            <div class="card-body">
-                <h5>Lecture 1</h5>
-                <hr />
-                <p class="card-text">
-                    <span class="text-info">Discription : </span> About this class
-                </p>
-                <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
-            </div>
-        </div>
-        <div class="card">
-            <img src="~/img/data-mining.png" />
-            <div class="card-body">
-                <h5>Lecture 1</h5>
-                <hr />
-                <p class="card-text">
-                    <span class="text-info">Discription : </span> About this class
-                </p>
-                <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
+                <a href="https://en.wikipedia.org/wiki/Data_mining" class="btn btn-primary">wikipedia</a>
+                <a href="https://pedia.svuonline.org/course/view.php?id=410" class="btn btn-primary">SVU pedia</a>
             </div>
         </div>
     </div>
-</div>
 
-<div class="py-5 bg-dark mb-2" id="homework">
-    <div class="v-scroll-menu">
-        <div class="card">
-            <img src="~/img/data-mining.png" />
-            <div class="card-body">
-                <h5>Homework 1</h5>
-                <hr />
-                <p class="card-text">
-                    <span class="text-info">Discription : </span> About this class
-                </p>
-                <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
-                <a href="#" class="btn btn-info"><i class="fa fa-code"></i></a>
-                <a href="#" class="btn btn-info"><i class="fa fa-spider"></i></a>
+    <!--Lectures part-->
+    <div class="py-5" id="lectures">
+        <div class="v-scroll-menu">
+            @for (int i = 1; i < 10; i++)
+            {
+                <div class="card">
+                    <img src="~/img/lecture.svg" />
+                    <div class="card-body">
+                        <h5>Lecture @i</h5>
+                        <hr />
+                        <p class="card-text">
+                            <span class="text-info">Discription : </span> Introduction lecture
+                        </p>
+                        <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+
+    <!--Homework part-->
+    <div class="py-5 bg-dark mb-2" id="homework">
+        <div class="v-scroll-menu">
+            <div class="card">
+                <img src="~/img/data-mining.png" />
+                <div class="card-body">
+                    <h5>Homework 1</h5>
+                    <hr />
+                    <p class="card-text">
+                        <span class="text-info">Discription : </span> About this class
+                    </p>
+                    <a href="#" class="btn btn-info"><i class="fa fa-download"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fa fa-code"></i></a>
+                    <a href="#" class="btn btn-info"><i class="fa fa-spider"></i></a>
+                </div>
             </div>
         </div>
     </div>
