--- a/SVU/SVU.Web.UI/Views/Home/Index.cshtml
+++ b/SVU/SVU.Web.UI/Views/Home/Index.cshtml
@@ -1,43 +1,68 @@
 ﻿@{
     ViewBag.Title = "Home page";
 }
-<div class="jumbotron bg-light">
-    <h4 class="display-4">
-        Who are we
-    </h4>
-    <hr />
-    <p class="text-info font-weight-bold">
-        A group of students continuing thier studies in <a>Syrian Virtual University</a> in Master of web science, we wanted to create a helper website
-        for people to see all the latest news about the lectures and homeworks done by my group.
-    </p>
+
+<div class="container-fluid bg-light container-full-hight p-md-5" id="about">
+    <div class="row ">
+        <div class="col-md slide-in-left">
+            <h4 class="display-4">
+                Who are we
+            </h4>
+            <hr />
+            <p class=" font-weight-bold">
+                A group of students continuing thier studies in <a href="#"> Syrian Virtual University</a> in Master of web science, we wanted to create a helper website
+                for people to see all the latest news about the lectures and homeworks done by my group.
+            </p>
+        </div>
+        <div class="col-md text-center slide-in-right ">
+            <img class="side-img puls " src="~/img/round.svg" />
+        </div>
+    </div>
 </div>
 
-<div class="jumbotron bg-light">
 
-    <h4 class="display-4">
-        Target
-    </h4>
-    <hr />
-    <p class="text-info font-weight-bold">
-        We aim to help all other classmates in any way possible from our blogs to our homeworks which we are going to keep open-source
-        and can be found on <a>GitHub</a>.
-    </p>
+<div class="container-fluid bg-primary text-white container-full-hight p-md-5" id="target">
+    <div class="row ">
+        <div class="col-md text-center slide-in-left">
+            <img class="side-img puls" src="~/img/target.svg" />
+        </div>
+        <div class="col-md slide-in-right">
+            <h4 class="display-4">
+                Target
+            </h4>
+            <hr class="border-white"/>
+            <p class="font-weight-bold">
+                We aim to help all other classmates in any way possible from our blogs to our homeworks which we are going to keep open-source
+                and can be found on <a>GitHub</a>.
+            </p>
+        </div>
+
+    </div>
 </div>
 
-<div class="jumbotron bg-light">
-    <h4 class=" display-4">
-        Contact us
-    </h4>
-    <hr />
-    <p class="text-info font-weight-bold">
-        Saria Houloubi :
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="mailto:houloubis@gmai.com?subject=SVU-Project">Email</a>
-            </li>
-            <li class="list-group-item">
-                <a href="#">Facebook</a>
-            </li>
-        </ul>
-    </p>
+
+<div class="container-fluid bg-light text-dark container-full-hight p-md-5" id="contactus">
+    <div class="row ">
+        <div class="col-md slide-in-left">
+            <h4 class="display-4">
+                Contact us
+            </h4>
+            <hr />
+            <p class="font-weight-bold">
+                Saria Houloubi :
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <a href="mailto:houloubis@gmai.com?subject=SVU-Project">/Email</a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#">/Facebook</a>
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <div class="col-md text-center slide-in-right">
+            <img class="side-img puls " src="~/img/contactus.svg" />
+        </div>
+
+    </div>
 </div>
