--- a/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
+++ b/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <body>
     <div class="hole-page-container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a href="/" class="navbar-brand">SVU Projects</a>
+            <a href="/" class="navbar-brand"><img src="~/img/book-and-glasses.svg" alt="logo" style="max-width : 40px" title="logo-image"/></a>
             <!--Toggle button for small screen-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,6 +24,15 @@
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#about" title="about-part">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/#target" title="target-part">Target</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/#contactus" title="contactus-part">Contact us</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" aria-haspopup="true"
                            id="navbarDropDown" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -51,9 +60,9 @@
 
 
     <!--footer start-->
-    <footer class="text-center">
-        <hr class="m-0" />
-        <span>Copyright &copy; @DateTime.Now.Year</span>
+    <footer >
+        <hr class="my-2" />
+        <span >Copyright &copy; @DateTime.Now.Year</span>
     </footer>
 
     <!--JS files-->
