Fixed desig and code bugs

--- a/SVU/SVU.Web.UI/Views/Shared/_NotFound.cshtml
+++ b/SVU/SVU.Web.UI/Views/Shared/_NotFound.cshtml
@@ -1,8 +1,10 @@
 ﻿@{ 
     ViewBag.Title = "Opss Not Found";
 }
-<div class="container">
+<div class="container text-center">
+    
     <h1 class="display-1">
         Requesting page not found.
     </h1>
+    <img  src="~/img/_NotFound.jpg" alt="Not found image"/>
 </div>
