--- a/SVU/SVU.Web.UI/wwwroot/css/custom/card.css
+++ b/SVU/SVU.Web.UI/wwwroot/css/custom/card.css
@@ -7,7 +7,12 @@
         width: 50%;
         margin: 0px auto;
     }
+    
 
 .card-body p {
     white-space: pre-line;
+}
+
+.lecture-card {
+    width: 200px;
 }
