--- a/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
+++ b/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
@@ -39,11 +39,11 @@
                             Looking for a spacfic class
                         </a>
                         <div class="dropdown-menu" id="navbarDropDown">
-                            <a class="dropdown-item" href="/class/ADE">ADE (Data Exchange)</a>
-                            <a class="dropdown-item" href="/class/ADM">ADM (Data Mining)</a>
-                            <a class="dropdown-item" href="/class/ADP">ADP (Distribution Programming)</a>
-                            <a class="dropdown-item" href="/class/AWE">AWE (Web Engineering)</a>
-                            <a class="dropdown-item" href="/class/AWP">AWP (Web Programming)</a>
+                            <a class="dropdown-item" href="/course/ADE">ADE (Data Exchange)</a>
+                            <a class="dropdown-item" href="/course/ADM">ADM (Data Mining)</a>
+                            <a class="dropdown-item" href="/course/ADP">ADP (Distribution Programming)</a>
+                            <a class="dropdown-item" href="/course/AWE">AWE (Web Engineering)</a>
+                            <a class="dropdown-item" href="/course/AWP">AWP (Web Programming)</a>
                         </div>
                     </li>
                 </ul>
