Added bayes for tennis dataset

--- a/SVU/SVU.Web.UI/Views/Homework/HeartDisease.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/HeartDisease.cshtml
@@ -76,7 +76,7 @@
     </table>
     <hr />
     <h5>Dataset:</h5>
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-bordered lg-table">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
