--- a/SVU/SVU.Web.UI/wwwroot/css/custom/table.css
+++ b/SVU/SVU.Web.UI/wwwroot/css/custom/table.css
@@ -2,7 +2,7 @@
     Custom tables
 */
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    table{
+    .lg-table{
         overflow-x : auto;
         display : block;
     }
